examples/negative/modules/duplicate_fn_decl.kai
# Negative fixture (#538 shape 2 / modules): two `fn` declarations
# with the same name `foo` appear in the same module. The resolver
# rejects with "already declared", matching the `type` case
# covered by `duplicate_type_decl.kai`. Closed by the #538 lane
# (shapes 2 + 3); was previously a silent_contract/ fixture.

fn foo() : Int = 1
fn foo() : Int = 2

fn main() : Int = foo()
